comment problems fixed: pagination, status changes
